--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>hello coursera</title>
 </head>
 <body>
-<h1>Hi there coursera</h1>
+<h1>Hi there coursera! My name is Sophia.</h1>
 </body>
 </html>
